# ld52

./: Cargo.toml  build_web.sh  run_web.sh
assets/: custom_shader.glsl
src/: main.rs  rapier_integration.rs  temporary.rs  ui.rs
web_build/: index.html  ld52.wasm
web_build/assets/: unlit_ui.glsl
