[package]
name = "ld52"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi3 = {path = "../koi3"}
rapier2d = "0.14.0"
kui = {path = "../koi2/crates/kui"}

[profile.release]
 # Consider these options for a smaller binary size
 strip = true
 panic = "abort"
 opt-level = "z"  # Optimize for size.
 lto = true
 codegen-units = 1